# blackcoin-more

./: .appveyor.yml  .gitignore  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  COPYING  INSTALL.md  Jenkinsfile  Makefile.am  README.md  configure.ac  libbitcoinconsensus.pc  libbitcoinconsensus.pc.in
.Trash-1000/info/: Dockerfile.ubase-base.trashinfo  moreBuilder.trashinfo
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  good_first_issue.md
.github/workflows/: build-and-push-docker.yaml  build.yml  ci.yml  docker_build_push.yaml  docker_build_push_26.yml  docker_build_push_develop.yml  docker_build_push_master.yaml  docker_build_push_masteryaml
build-aux/m4/: ax_boost_base.m4  ax_pthread.m4  bitcoin_find_bdb48.m4  bitcoin_find_bdb62.m4  bitcoin_qt.m4  l_atomic.m4
build_msvc/: README.md  vcpkg.json
build_msvc/testconsensus/: testconsensus.cpp
ci/test/: 03_test_script.sh  06_script_b.sh
contrib/: README.md  bitcoin-cli.bash-completion  blk  install_db4.sh  install_db6.sh  valgrind.supp
contrib/builder-keys/: README.md  keys.txt
contrib/debian/: control
contrib/devtools/: README.md  gen-blackmore-conf.sh  gen-manpages.py  gen-manpages.sh  security-check.py  symbol-check.py  utxo_snapshot.sh
contrib/docker/: .gitignore  Dockerfile.minbase  Dockerfile.ubase  Dockerfile.ubase-base  Dockerfile.ubuntu  README.md  build.sh  gh-build-26.sh  gh-build.sh
contrib/gitian-descriptors/: assign_DISTNAME  gitian-linux.yml  gitian-osx-signer.yml  gitian-osx.yml  gitian-win.yml
contrib/init/: README.md  blackmored.conf  blackmored.init  blackmored.openrc  blackmored.openrcconf  blackmored.service  org.blackcoin.blackmored.plist
contrib/linearize/: README.md  example-linearize.cfg  linearize-hashes.py
contrib/macdeploy/: README.md  custom_dsstore.py  detached-sig-create.sh  fancy.plist  macdeployqtplus
contrib/qos/: README.md  tc.sh
contrib/seeds/: generate-seeds.py  makeseeds.py  nodes_main.txt  nodes_main_manual.txt  nodes_test.txt
contrib/spendfrom/: spendfrom.py
contrib/testgen/: gen_key_io_test_vectors.py
contrib/verify-commits/: gpg.sh  verify-commits.sh
contrib/zmq/: zmq_sub.py
depends/: Makefile  README.md  config.guess  config.site.in  config.sub  funcs.mk  packages.md
depends/SDKs/: .gitignore
depends/builders/: mingw32.mk  mingw64.mk
depends/hosts/: darwin.mk  mingw32.mk  mingw64.mk
doc/: Doxyfile  Doxyfile.in  JSON-RPC-interface.md  README.md  README_windows.txt  REST-interface.md  bips.md  bitcoin-conf.md  build-android.md  build-freebsd.md  build-netbsd.md  build-openbsd.md  build-osx.md  build-unix.md  build-windows.md  dependencies.md  developer-notes.md  gitian-building.md  i2p.md  init.md  psbt.md  release-notes.md  release-process.md  shared-libraries.md  tor.md
doc/man/: Makefile.am  blackmore-cli.1  blackmore-qt.1  blackmore-tx.1  blackmore-util.1  blackmore-wallet.1  blackmored.1
qa/: README.md
qa/pull-tester/: rpc-tests.py  run-bitcoind-for-test.sh.in
qa/rpc-tests/: bip65-cltv-p2p.py  bip9-softforks.py  bipdersig-p2p.py  blockchain.py  fundrawtransaction.py  httpbasics.py  importprunedfunds.py  keypool.py  listtransactions.py  maxuploadtarget.py  mempool_packages.py  merkle_blocks.py  p2p-compactblocks.py  p2p-versionbits-warning.py  proxy_test.py  rawtransactions.py  reindex.py  rpcbind_test.py  sendheaders.py  wallet.py  zmq_test.py
share/: genbuild.sh  setup.nsi.in
share/certs/: Notfiat_LLC_of_Delaware__cert_59899_pub.pem  PrivateKeyNotes.md
share/examples/: bitcoin.conf  blackmore.conf
share/pixmaps/: bitcoin128.xpm  bitcoin16.xpm  bitcoin256.xpm  bitcoin64.xpm  blackcoin32.xpm
share/qt/: Info.plist.in  extract_strings_qt.py
share/rpcauth/: rpcauth.py
share/rpcuser/: rpcuser.py
src/: .clang-format  Makefile.am  Makefile.bench.include  Makefile.qt.include  Makefile.qttest.include  Makefile.test.include  addrdb.cpp  addresstype.cpp  addrman.cpp  addrman.h  amount.cpp  amount.h  base58.cpp  base58.h  bitcoin-cli-res.rc  bitcoin-cli.cpp  bitcoin-tx-res.rc  bitcoin-tx.cpp  bitcoin-util-res.rc  bitcoin-util.cpp  bitcoin-wallet-res.rc  bitcoin-wallet.cpp  bitcoind-res.rc  bitcoind.cpp  blockencodings.cpp  blockencodings.h  blockfilter.cpp  chain.cpp  chain.h  chainparams.cpp  chainparams.h  chainparamsbase.cpp  chainparamsbase.h  chainparamsseeds.h  clientversion.cpp  clientversion.h  coins.cpp  coins.h  compat.h  config.h  (+87 more)
src/bench/: .gitignore  addrman.cpp  bench.cpp  block_assemble.cpp  cashaddr.cpp  ccoins_caching.cpp  checkblock.cpp  coin_selection.cpp  duplicate_inputs.cpp  load_external.cpp  mempool_eviction.cpp  readblock.cpp  rpc_blockchain.cpp  sign_transaction.cpp  streams_findbyte.cpp  verify_script.cpp  wallet_create_tx.cpp
src/common/: args.cpp  messages.cpp  signmessage.cpp
src/compat/: assumptions.h  byteswap.h  glibc_compat.cpp
src/consensus/: amount.h  consensus.h  merkle.cpp  merkle.h  params.h  tx_check.cpp  tx_verify.cpp  tx_verify.h  validation.h
src/crypto/: aes.h  scrypt.cpp  scrypt.h  sha256.h
src/index/: base.cpp  base.h  blockfilterindex.cpp  blockfilterindex.h  coinstatsindex.cpp  coinstatsindex.h  txindex.cpp  txindex.h
src/init/: bitcoin-node.cpp
src/interfaces/: chain.h  node.h  wallet.h
src/kernel/: chain.cpp  chainparams.cpp  chainparams.h  coinstats.h  mempool_options.h  mempool_persist.cpp
src/node/: blockstorage.cpp  blockstorage.h  chainstate.cpp  context.h  interfaces.cpp  mempool_args.cpp  miner.cpp  miner.h  protocol_version.h  warnings.cpp
src/policy/: fees.cpp  fees.h  policy.cpp  policy.h  settings.h
src/primitives/: block.cpp  block.h  transaction.cpp  transaction.h
src/qt/: Makefile  addressbookpage.cpp  addresstablemodel.cpp  askpassphrasedialog.cpp  askpassphrasedialog.h  bantablemodel.cpp  bitcoin.cpp  bitcoin.h  bitcoin.qrc  bitcoinaddressvalidator.cpp  bitcoinamountfield.h  bitcoingui.cpp  bitcoingui.h  bitcoinstrings.cpp  bitcoinunits.cpp  clientmodel.cpp  clientmodel.h  coincontroldialog.cpp  createwalletdialog.cpp  editaddressdialog.cpp  guiconstants.h  guiutil.cpp  guiutil.h  intro.cpp  (+47 more)
(+452 files in other folders)
